feat: implement JWT-based authentication system and CRUD operations for categories